# baby-snake

./: README.md  pyproject.toml
baby_snake/: main.py
baby_snake/constants/: index.py
baby_snake/models/: Goal.py  Player.py  SnakeBody.py
baby_snake/utils/: index.py
libs/: graphics.py
